k8s/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: my-application
spec:
  type: ClusterIP
  selector:
    app: adminer
  ports:
  - port: 8080
    targetPort: 8080
