k8s/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: my-application
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
  - name: web
    port: 80
    targetPort: 80
  - name: websecure
    port: 443
    targetPort: 443
  - name: admin
    port: 8080
    targetPort: 8080
